0.X.X - XXXX-XX-XX
==================

  * add support of requests rather than custom code for ssl checking when
    retrieving certificates.

0.4.0 - 2012-03-13
==================

  * Renamed from PyVEP to PyBrowserID, in keeping with Mozilla branding.
  * Audience checking now accepts glob-style patterns as well as fixed
    audience strings.
  * Verifier objects now accept a list of audience patterns as their first
    argument.  This is designed to encourage doing the right thing rather than,
    say, passing in the hostname from the request.
  * Allowed LocalVerifier to use of a custom JWT parser.
  * Removed browserid.verify_[remote|local|dummy] since they just cause
    confusion.  You should either accept the defaults provided by the
    browserid.verify function, or use a full-blown Verifier object.
  * Split certificate loading and caching into a separate class, in
    browserid.certificates:CertificatesManager.
  * Removed the DummyVerifier class in favour of supporting functions
    in browserid.tests.support.